[package]
name = "svd2html"
version = "0.1.2"
edition = "2021"
description = "Generates a webpage for a given SVD file containing details on every peripheral and register and their level of coverage."
documentation = "https://docs.rs/svd2html"
license = "MIT OR Apache-2.0"
repository = "https://github.com/burrbull/svd2html/"
readme = "README.md"

[dependencies]
anyhow = "1.0.68"
clap = { version = "4.0.32", features = ["derive"] }
liquid = "0.26.0"
once_cell = "1.17.0"
rayon = "1.6.1"
regex = "1.7.0"
svd-parser = { version = "0.14.1", features = ["derive-from", "expand"] }
