[package]
name = "svd2html"
version = "0.1.4"
edition = "2021"
description = "Generates a webpage for a given SVD file containing details on every peripheral and register and their level of coverage."
documentation = "https://docs.rs/svd2html"
license = "MIT OR Apache-2.0"
repository = "https://github.com/burrbull/svd2html/"
readme = "README.md"

[dependencies]
anyhow = "1.0.72"
clap = { version = "4.3.19", features = ["derive"] }
liquid = "0.26.0"
once_cell = "1.18.0"
rayon = "1.7.0"
regex = "1.9.1"
svd-parser = { version = "0.14.1", features = ["derive-from", "expand"] }
